--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -723,7 +723,7 @@
 	"advancement.create.anvil_plough": "锻匠大炮",
 	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
 	"advancement.create.lava_wheel_00000": "风火轮",
-	"advancement.create.lava_wheel_00000.desc": "UNLOCALIZED: This shouldn't have worked§7\n(Hidden Advancement)",
+	"advancement.create.lava_wheel_00000.desc": "这不应该能运行§7\n(隐藏进度)",
 	"advancement.create.hand_crank_000": "锻炼时间",
 	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n(Hidden Advancement)",
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
@@ -736,14 +736,14 @@
 	"advancement.create.copper_casing.desc": "使用铜和木头制作一个铜机壳",
 	"advancement.create.spout": "哗啦啦",
 	"advancement.create.spout.desc": "观察注液器灌满物品",
-	"advancement.create.drain": "UNLOCALIZED: Tumble Draining",
-	"advancement.create.drain.desc": "UNLOCALIZED: Watch a fluid containing item be emptied by an Item Drain",
+	"advancement.create.drain": "滚筒排液",
+	"advancement.create.drain.desc": "目睹物品被粪液池排空",
 	"advancement.create.steam_engine": "发电站",
 	"advancement.create.steam_engine.desc": "UNLOCALIZED: Use a Steam engine to generate torque",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽哨",
 	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
-	"advancement.create.backtank.desc": "UNLOCALIZED: Create a copper backtank and make it accumulate Air Pressure",
+	"advancement.create.backtank.desc": "做一个铜制背罐并充入空气",
 	"advancement.create.diving_suit": "深潜准备",
 	"advancement.create.diving_suit.desc": "装备铜制背罐和潜水头盔，然后跳进水里",
 	"advancement.create.mechanical_pump_0": "面临压力",
@@ -754,30 +754,30 @@
 	"advancement.create.water_supply.desc": "用流体管道的末端抽取水方块",
 	"advancement.create.hose_pulley": "工业泄漏",
 	"advancement.create.hose_pulley.desc": "放下一个软管滑轮，观察它排干或填充一大片流体",
-	"advancement.create.chocolate_bucket": "UNLOCALIZED: A World of Imagination",
-	"advancement.create.chocolate_bucket.desc": "UNLOCALIZED: Obtain a Bucket of Molten Chocolate",
+	"advancement.create.chocolate_bucket": "幻想世界",
+	"advancement.create.chocolate_bucket.desc": "获得一桶熔融巧克力",
 	"advancement.create.honey_drain": "UNLOCALIZED: Autonomous Bee-Keeping",
 	"advancement.create.honey_drain.desc": "UNLOCALIZED: Use pipes to pull honey from a Bee Nest or Bee House",
-	"advancement.create.hose_pulley_lava": "UNLOCALIZED: Tapping the Mantle",
-	"advancement.create.hose_pulley_lava.desc": "UNLOCALIZED: Pump from a body of Lava large enough to be considered infinite",
+	"advancement.create.hose_pulley_lava": "汲取行星核心",
+	"advancement.create.hose_pulley_lava.desc": "从广阔的熔岩湖中抽出熔岩",
 	"advancement.create.steam_engine_maxed": "全速前进",
 	"advancement.create.steam_engine_maxed.desc": "搭建一个最高级的锅炉",
 	"advancement.create.foods": "均衡饮食",
 	"advancement.create.foods.desc": "用同一个注液器分别做出甜甜卷、蜂蜜苹果和巧克力包层浆果",
-	"advancement.create.diving_suit_lava": "UNLOCALIZED: Swimming with the Striders",
-	"advancement.create.diving_suit_lava.desc": "UNLOCALIZED: Attempt to take a dive in lava with your Copper Diving Gear§7\n(Hidden Advancement)",
-	"advancement.create.chained_drain": "UNLOCALIZED: On a Roll",
-	"advancement.create.chained_drain.desc": "UNLOCALIZED: Watch an Item move across a row of Item Drains§7\n(Hidden Advancement)",
+	"advancement.create.diving_suit_lava": "与炽足兽共泳",
+	"advancement.create.diving_suit_lava.desc": "努力尝试用潜水装备在熔岩中潜水§7\n(隐藏进度)",
+	"advancement.create.chained_drain": "翻滚吧！",
+	"advancement.create.chained_drain.desc": "目睹一个物品滚过一串分液池§7\n(隐藏进度)",
 	"advancement.create.cross_streams": "UNLOCALIZED: Don't cross the Streams!",
 	"advancement.create.cross_streams.desc": "UNLOCALIZED: Watch two fluids meet in your pipe network§7\n(Hidden Advancement)",
-	"advancement.create.pipe_organ": "UNLOCALIZED: The Pipe Organ",
-	"advancement.create.pipe_organ.desc": "UNLOCALIZED: Attach 12 uniquely pitched Steam Whistles to a single fluid tank§7\n(Hidden Advancement)",
+	"advancement.create.pipe_organ": "管风琴",
+	"advancement.create.pipe_organ.desc": "在一个§7\n(Hidden Advancement)",
 	"advancement.create.brass": "真正的合金",
 	"advancement.create.brass.desc": "使用粉碎锌矿石和粉碎铜矿石来制作黄铜",
 	"advancement.create.brass_casing": "黄铜时代",
 	"advancement.create.brass_casing.desc": "用黄铜和木头制作一个黄铜机壳",
-	"advancement.create.rose_quartz": "UNLOCALIZED: Pink Diamonds",
-	"advancement.create.rose_quartz.desc": "UNLOCALIZED: Polish some Rose Quartz",
+	"advancement.create.rose_quartz": "粉色钻石",
+	"advancement.create.rose_quartz.desc": "用砂纸将玫瑰石英打磨至透明",
 	"advancement.create.deployer": "我就指着你了咋地？",
 	"advancement.create.deployer.desc": "放置并且启动一个机械手，这可是你右手的完美复制品",
 	"advancement.create.precision_mechanism": "高新技术",
