中文翻译：UI 文本——锅炉和背罐

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -567,7 +567,7 @@
 	"enchantment.create.capacity": "扩容",
 	"enchantment.create.potato_recovery": "土豆回收",
 
-	"entity.create.carriage_contraption": "UNLOCALIZED: Carriage Contraption",
+	"entity.create.carriage_contraption": "车厢装置",
 	"entity.create.contraption": "装置",
 	"entity.create.crafting_blueprint": "合成蓝图",
 	"entity.create.gantry_contraption": "起重机装置",
@@ -875,7 +875,7 @@
 	"death.attack.create.potato_cannon.item": "%1$s被%2$s用%3$s射死了",
 	"death.attack.create.cuckoo_clock_explosion": "%1$s被布谷鸟闹钟炸得粉身碎骨",
 	"death.attack.create.cuckoo_clock_explosion.player": "%1$s被布谷鸟闹钟炸得粉身碎骨",
-	"death.attack.create.run_over": "UNLOCALIZED: %1$s was run over by %2$s",
+	"death.attack.create.run_over": "%1$s被%2$s碾了过去",
 
 	"create.block.deployer.damage_source_name": "二五仔机械手",
 	"create.block.cart_assembler.invalid": "请将矿车装配器放置在铁轨上",
@@ -914,8 +914,8 @@
 	"create.recipe.mystery_conversion": "神秘转化",
 	"create.recipe.spout_filling": "注液",
 	"create.recipe.draining": "分液",
-	"create.recipe.item_application": "UNLOCALIZED: Manual Item Application",
-	"create.recipe.item_application.any_axe": "UNLOCALIZED: Any Axe",
+	"create.recipe.item_application": "手动物品使用",
+	"create.recipe.item_application.any_axe": "任意斧头",
 	"create.recipe.sequenced_assembly": "序列组装",
 	"create.recipe.assembly.next": "下一步：%1$s",
 	"create.recipe.assembly.step": "第%1$s步：",
@@ -1325,7 +1325,7 @@
 	"create.tooltip.stressImpact.medium": "中",
 	"create.tooltip.stressImpact.high": "高",
 	"create.tooltip.stressImpact.overstressed": "过载",
-	"create.tooltip.up_to": "UNLOCALIZED: Up to %1$s",
+	"create.tooltip.up_to": "最多%1$s",
 	"create.tooltip.capacityProvided": "应力量：%1$s",
 	"create.tooltip.capacityProvided.low": "小",
 	"create.tooltip.capacityProvided.medium": "中",
@@ -1398,26 +1398,26 @@
 	"create.hint.full_deployer.title": "机械手物品溢出",
 	"create.hint.full_deployer": "_机械手_包含_过剩的物品_，需要被_提取_，使用_漏斗_或其他方法将其从溢出中释放出来",
 
-	"create.backtank.low": "UNLOCALIZED: Backtank pressure low",
-	"create.backtank.depleted": "UNLOCALIZED: Backtank pressure depleted",
+	"create.backtank.low": "背罐压力低",
+	"create.backtank.depleted": "背罐压力耗尽",
 
-	"create.hint.derailed_train.title": "UNLOCALIZED: Derailed Train",
-	"create.hint.derailed_train": "UNLOCALIZED: It appears this _Train_ is no longer sitting on a connected track piece. _Right-Click_ using a _wrench_ in order to relocate it to a nearby track.",
+	"create.hint.derailed_train.title": "出轨的列车",
+	"create.hint.derailed_train": "看起来该列车不再坐在相连的轨道段上，使用_扳手__右击_可以将它重新安置到附近的轨道上",
 
-	"create.boiler.status": "UNLOCALIZED: Boiler Status:  %1$s",
-	"create.boiler.status_short": "UNLOCALIZED: Boiler:  %1$s",
-	"create.boiler.passive": "UNLOCALIZED: Passive",
-	"create.boiler.idle": "UNLOCALIZED: Idle",
-	"create.boiler.lvl": "UNLOCALIZED: Lvl %1$s",
-	"create.boiler.max_lvl": "UNLOCALIZED: Max",
-	"create.boiler.size": "UNLOCALIZED: Size",
-	"create.boiler.size_dots": "UNLOCALIZED: ....... ",
-	"create.boiler.water": "UNLOCALIZED: Water",
-	"create.boiler.water_dots": "UNLOCALIZED: ... ",
-	"create.boiler.heat": "UNLOCALIZED: Heat",
-	"create.boiler.heat_dots": "UNLOCALIZED: ...... ",
-	"create.boiler.via_one_engine": "UNLOCALIZED: via 1 engine",
-	"create.boiler.via_engines": "UNLOCALIZED: via %1$s engines",
+	"create.boiler.status": "锅炉状态：%1$s",
+	"create.boiler.status_short": "锅炉：%1$s",
+	"create.boiler.passive": "被动",
+	"create.boiler.idle": "空闲",
+	"create.boiler.lvl": "等级%1$s",
+	"create.boiler.max_lvl": "最高等级",
+	"create.boiler.size": "尺寸",
+	"create.boiler.size_dots": "...... ",
+	"create.boiler.water": "水量",
+	"create.boiler.water_dots": "...... ",
+	"create.boiler.heat": "热度",
+	"create.boiler.heat_dots": "...... ",
+	"create.boiler.via_one_engine": "通过1个引擎",
+	"create.boiler.via_engines": "通过%1$s个引擎",
 
 	"create.gui.schedule.lmb_edit": "UNLOCALIZED: Left-Click to Edit",
 	"create.gui.schedule.rmb_remove": "UNLOCALIZED: Right-Click to Remove",
@@ -2914,7 +2914,7 @@
 	"create.ponder.train_assembly.text_12": "打开车站UI并确认组装过程",
 	"create.ponder.train_assembly.text_13": "列车只能在车站被拆解为方块",
 	"create.ponder.train_assembly.text_14": "在车站上使用时，地图会在该位置添加一个带标签的标记",
-	"create.ponder.train_assembly.text_15": "组装好的列车可以使用扳手重新摆放到相邻的轨道",
+	"create.ponder.train_assembly.text_15": "组装好的列车可以使用扳手重新安置到相邻的轨道",
 	"create.ponder.train_assembly.text_2": "车站是你的轨道网络的路径点",
 	"create.ponder.train_assembly.text_3": "要创建新列车，打开UI并切换到组装模式",
 	"create.ponder.train_assembly.text_4": "在组装期间，时刻表上的列车不会接近这个车站",
