中文翻译：上一个提交的标点符号

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -723,9 +723,9 @@
 	"advancement.create.anvil_plough": "锻匠大炮",
 	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
 	"advancement.create.lava_wheel_00000": "风火轮",
-	"advancement.create.lava_wheel_00000.desc": "这不应该能运行§7\n(隐藏进度)",
+	"advancement.create.lava_wheel_00000.desc": "这不应该能运行§7\n（隐藏进度）",
 	"advancement.create.hand_crank_000": "锻炼时间",
-	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n(隐藏进度)",
+	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n（隐藏进度）",
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
 	"advancement.create.belt_funnel_kiss.desc": "让两个安装在传送带上的漏斗深情相吻",
 	"advancement.create.stressometer_maxed": "UNLOCALIZED: Perfectly Stressed",
@@ -765,13 +765,13 @@
 	"advancement.create.foods": "均衡饮食",
 	"advancement.create.foods.desc": "用同一个注液器分别制作巧克力包层浆果、蜂蜜苹果和甜甜卷",
 	"advancement.create.diving_suit_lava": "与炽足兽共泳",
-	"advancement.create.diving_suit_lava.desc": "努力尝试用潜水装备在熔岩中潜水§7\n(隐藏进度)",
+	"advancement.create.diving_suit_lava.desc": "努力尝试用潜水装备在熔岩中潜水§7\n（隐藏进度）",
 	"advancement.create.chained_drain": "翻滚吧！",
-	"advancement.create.chained_drain.desc": "目睹一个物品滚过一串分液池§7\n(隐藏进度)",
+	"advancement.create.chained_drain.desc": "目睹一个物品滚过一串分液池§7\n（隐藏进度）",
 	"advancement.create.cross_streams": "UNLOCALIZED: Don't cross the Streams!",
-	"advancement.create.cross_streams.desc": "目睹两种流体在你的管道网络中相交§7\n(隐藏进度）",
+	"advancement.create.cross_streams.desc": "目睹两种流体在你的管道网络中相交§7\n（隐藏进度）",
 	"advancement.create.pipe_organ": "管风琴",
-	"advancement.create.pipe_organ.desc": "在一个流体储罐上安装12个不同音调的蒸汽笛§7\n(隐藏进度)",
+	"advancement.create.pipe_organ.desc": "在一个流体储罐上安装12个不同音调的蒸汽笛§7\n（隐藏进度）",
 	"advancement.create.brass": "真正的合金",
 	"advancement.create.brass.desc": "使用粉碎锌矿石和粉碎铜矿石来制作黄铜",
 	"advancement.create.brass_casing": "黄铜时代",
@@ -817,7 +817,7 @@
 	"advancement.create.crafter_lazy_000": "权宜之计",
 	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)",
 	"advancement.create.extendo_grip_dual": "UNLOCALIZED: To full Extent",
-	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n(Hidden Advancement)",
+	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n（隐藏进度）",
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
 	"advancement.create.musical_arm.desc": "使用动力臂播放唱片",
 	"advancement.create.sturdy_sheet": "坚如磐石",
@@ -841,17 +841,17 @@
 	"advancement.create.track_crafting_factory": "轨道工厂",
 	"advancement.create.track_crafting_factory.desc": "用同一个动力辊压机制造1000个列车轨道",
 	"advancement.create.long_bend": "最长弯道",
-	"advancement.create.long_bend.desc": "建造一条长度超过 30 格的列车轨道",
+	"advancement.create.long_bend.desc": "建造一条长度超过30格的列车轨道",
 	"advancement.create.long_train": "UNLOCALIZED: Ambitious Endeavours",
 	"advancement.create.long_train.desc": "UNLOCALIZED: Create a Train with at least six Carriages",
 	"advancement.create.long_travel": "异地考察",
 	"advancement.create.long_travel.desc": "在距离起点5000格外的地方离开列车座位",
 	"advancement.create.train_roadkill": "泥头车，创创死",
-	"advancement.create.train_roadkill.desc": "用你的火车创死一名敌人§7\n(隐藏进度)",
+	"advancement.create.train_roadkill.desc": "用你的火车创死一名敌人§7\n（隐藏进度）",
 	"advancement.create.red_signal": "老司机",
-	"advancement.create.red_signal.desc": "乘火车闯红灯§7\n(隐藏进度)",
+	"advancement.create.red_signal.desc": "乘火车闯红灯§7\n（隐藏进度）",
 	"advancement.create.train_crash": "UNLOCALIZED: Terrible Service",
-	"advancement.create.train_crash.desc": "目睹火车遭到撞击§7\n(Hidden Advancement)",
+	"advancement.create.train_crash.desc": "目睹火车遭到撞击§7\n（隐藏进度）",
 	"advancement.create.train_crash_backwards": "UNLOCALIZED: 盲区",
 	"advancement.create.train_crash_backwards.desc": "在倒车时与另一辆列车相撞UNLOCALIZED: Crash into another Train while driving backwards§7\n(Hidden Advancement)",
 
@@ -1662,7 +1662,7 @@
 	"create.display_source.scoreboard.objective_not_found": "UNLOCALIZED: '%1$s' not found",
 	"create.display_source.scoreboard.objective.deaths": "UNLOCALIZED: Player Deaths",
 	"create.display_source.time_of_day": "时间",
-	"create.display_source.stop_watch": "停止监听",
+	"create.display_source.stop_watch": "UNLOCALIZED: Stopwatch",
 	"create.display_source.time.format": "时间格式",
 	"create.display_source.time.12_hour": "12小时制",
 	"create.display_source.time.24_hour": "24小时制",
