中文翻译：一部分成就和轨道铺设提示
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -800,8 +800,8 @@
 	"advancement.create.potato_cannon.desc": "用土豆加农炮击杀一个生物",
 	"advancement.create.extendo_grip": "biu biu biu!",
 	"advancement.create.extendo_grip.desc": "获得一个伸缩机械手",
-	"advancement.create.linked_controller": "UNLOCALIZED: Remote Activation",
-	"advancement.create.linked_controller.desc": "UNLOCALIZED: Activate a Redstone Link using a Linked Controller",
+	"advancement.create.linked_controller": "远程激活",
+	"advancement.create.linked_controller.desc": "用无线红石遥控器激活无线红石终端",
 	"advancement.create.arm_blaze_burner": "熊熊燃烧",
 	"advancement.create.arm_blaze_burner.desc": "指导动力臂给烈焰人燃烧室投食",
 	"advancement.create.crusher_maxed_0000": "UNLOCALIZED: Crushing it",
@@ -826,8 +826,8 @@
 	"advancement.create.train_casing_00.desc": "用坚固薄板制作列车组件的机壳",
 	"advancement.create.train": "UNLOCALIZED: All Aboard!",
 	"advancement.create.train.desc": "装配你的第一辆列车",
-	"advancement.create.conductor": "UNLOCALIZED: Conductor Instructor",
-	"advancement.create.conductor.desc": "UNLOCALIZED: Instruct a Train driver with a Schedule",
+	"advancement.create.conductor": "指挥者的指挥者",
+	"advancement.create.conductor.desc": "UNLOCALIZED: 用Schedule指挥Train driver",
 	"advancement.create.track_signal": "交通控制",
 	"advancement.create.track_signal.desc": "放置一个列车信号机",
 	"advancement.create.display_board_0": "动态时间表",
@@ -843,17 +843,17 @@
 	"advancement.create.long_bend": "最长弯道",
 	"advancement.create.long_bend.desc": "建造一条长度超过30格的列车轨道",
 	"advancement.create.long_train": "UNLOCALIZED: Ambitious Endeavours",
-	"advancement.create.long_train.desc": "UNLOCALIZED: Create a Train with at least six Carriages",
+	"advancement.create.long_train.desc": "建造至少带有六个车厢的列车",
 	"advancement.create.long_travel": "异地考察",
 	"advancement.create.long_travel.desc": "在距离起点5000格外的地方离开列车座位",
 	"advancement.create.train_roadkill": "泥头车，创创死",
 	"advancement.create.train_roadkill.desc": "用你的火车创死一名敌人§7\n（隐藏进度）",
 	"advancement.create.red_signal": "老司机",
-	"advancement.create.red_signal.desc": "乘火车闯红灯§7\n（隐藏进度）",
-	"advancement.create.train_crash": "UNLOCALIZED: Terrible Service",
-	"advancement.create.train_crash.desc": "目睹火车遭到撞击§7\n（隐藏进度）",
-	"advancement.create.train_crash_backwards": "UNLOCALIZED: 盲区",
-	"advancement.create.train_crash_backwards.desc": "在倒车时与另一辆列车相撞UNLOCALIZED: Crash into another Train while driving backwards§7\n(Hidden Advancement)",
+	"advancement.create.red_signal.desc": "驾驶火车闯红灯§7\n（隐藏进度）",
+	"advancement.create.train_crash": "劣质服务",
+	"advancement.create.train_crash.desc": "目睹自己乘坐的火车遭到撞击§7\n（隐藏进度）",
+	"advancement.create.train_crash_backwards": "盲点",
+	"advancement.create.train_crash_backwards.desc": "在倒车时与另一辆列车相撞",
 
 
 	"_": "->------------------------]  UI & Messages  [------------------------<-",
@@ -1520,28 +1520,28 @@
 	"create.schedule.no_stops": "该时刻表还没有任何停靠站",
 	"create.schedule.continued": "时刻表已恢复",
 
-	"create.track.selection_cleared": "UNLOCALIZED: Selection Cleared",
-	"create.track.valid_connection": "UNLOCALIZED: Can Connect ✔",
-	"create.track.second_point": "UNLOCALIZED: Place track or select a second point",
-	"create.track.too_far": "UNLOCALIZED: Too far away",
-	"create.track.original_missing": "UNLOCALIZED: Original block removed, Sneak-click to reset",
-	"create.track.perpendicular": "UNLOCALIZED: Cannot connect perpendicularly",
-	"create.track.ascending_s_curve": "UNLOCALIZED: Cannot create sloped S-Bends",
-	"create.track.too_sharp": "UNLOCALIZED: Turn too sharp",
-	"create.track.too_steep": "UNLOCALIZED: Slope too steep",
-	"create.track.slope_turn": "UNLOCALIZED: Cannot enter or leave slope on a turn",
-	"create.track.opposing_slopes": "UNLOCALIZED: Cannot connect opposing slopes",
-	"create.track.leave_slope_ascending": "UNLOCALIZED: Cannot leave this slope while ascending",
-	"create.track.leave_slope_descending": "UNLOCALIZED: Cannot leave this slope while descending",
-	"create.track.turn_90": "UNLOCALIZED: Can only turn up to 90 Degrees",
-	"create.track.junction_start": "UNLOCALIZED: Cannot start connection from a Junction",
-	"create.track.turn_start": "UNLOCALIZED: Cannot start connection from a Turn",
-	"create.track.not_enough_tracks": "UNLOCALIZED: Not holding enough tracks",
-	"create.track.not_enough_pavement": "UNLOCALIZED: Not holding enough pavement blocks",
+	"create.track.selection_cleared": "选区已清除",
+	"create.track.valid_connection": "可以连接✔",
+	"create.track.second_point": "放置轨道或选择第二个点",
+	"create.track.too_far": "太远了",
+	"create.track.original_missing": "原方块被移除，潜行点击重置",
+	"create.track.perpendicular": "无法垂直连接",
+	"create.track.ascending_s_curve": "无法创建有坡度的S型转弯",
+	"create.track.too_sharp": "转弯过急",
+	"create.track.too_steep": "坡度太陡",
+	"create.track.slope_turn": "不能在转弯时进入或离开斜坡",
+	"create.track.opposing_slopes": "不能连接相反的斜坡",
+	"create.track.leave_slope_ascending": "不能在上升时离开这个斜坡",
+	"create.track.leave_slope_descending": "不能在下降时离开这个斜坡",
+	"create.track.turn_90": "最多只能转90度",
+	"create.track.junction_start": "无法从路口开始连接",
+	"create.track.turn_start": "无法从转弯开始连接",
+	"create.track.not_enough_tracks": "没有足够的轨道",
+	"create.track.not_enough_pavement": "没有足够的路面方块",
 
-	"create.portal_track.failed": "UNLOCALIZED: Cannot place portal track:",
-	"create.portal_track.missing": "UNLOCALIZED: Target portal not generated yet",
-	"create.portal_track.blocked": "UNLOCALIZED: Target location blocked (%1$s,%2$s,%3$s)",
+	"create.portal_track.failed": "无法放置传送轨道：",
+	"create.portal_track.missing": "目标传送门还未生成",
+	"create.portal_track.blocked": "目标位置被封堵 (%1$s,%2$s,%3$s)",
 
 	"create.station.idle": "UNLOCALIZED: Station is Idle",
 	"create.station.assembly_title": "UNLOCALIZED: Train Assembly",
