中文翻译：车站和组装列车的界面和提示，以及一些进度
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -56,7 +56,7 @@
 	"block.create.cogwheel": "齿轮",
 	"block.create.content_observer": "物品侦测器",
 	"block.create.controller_rail": "控制铁轨",
-	"block.create.controls": "列车控制器",
+	"block.create.controls": "列车驾驶台",
 	"block.create.copper_backtank": "铜背罐",
 	"block.create.copper_casing": "铜机壳",
 	"block.create.copper_ladder": "铜梯子",
@@ -690,7 +690,7 @@
 	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
 	"advancement.create.mechanical_mixer": "UNLOCALIZED: Mixing it up",
 	"advancement.create.mechanical_mixer.desc": "UNLOCALIZED: Combine ingredients in a Mechanical Mixer",
-	"advancement.create.burner": "活壁炉",
+	"advancement.create.burner": "活炉",
 	"advancement.create.burner.desc": "获得烈焰人燃烧室",
 	"advancement.create.water_wheel": "掌控水流",
 	"advancement.create.water_wheel.desc": "放置一个水车并且让它开始旋转！",
@@ -710,16 +710,16 @@
 	"advancement.create.wrench_goggles.desc": "同时装备工程师护目镜与扳手",
 	"advancement.create.stressometer": "精密的应力控制",
 	"advancement.create.stressometer.desc": "放置一个应力表，并且戴上工程师护目镜来读取应力数据",
-	"advancement.create.cuckoo_clock": "UNLOCALIZED: Is it Time?",
-	"advancement.create.cuckoo_clock.desc": "UNLOCALIZED: Witness your Cuckoo Clock announce bedtime",
+	"advancement.create.cuckoo_clock": "到点了吗？",
+	"advancement.create.cuckoo_clock.desc": "目睹你的布谷鸟闹钟提醒你睡觉",
 	"advancement.create.windmill_maxed": "强风肆虐",
 	"advancement.create.windmill_maxed.desc": "组装一个最高级的风车",
 	"advancement.create.ejector_maxed": "跳板冠军",
 	"advancement.create.ejector_maxed.desc": "被弹射置物台弹飞30格以外",
 	"advancement.create.pulley_maxed": "UNLOCALIZED: Rope to Nowhere",
-	"advancement.create.pulley_maxed.desc": "UNLOCALIZED: Extend a Rope Pulley over 200 blocks deep",
+	"advancement.create.pulley_maxed.desc": "使用绳索滑轮伸出超过200格长的绳索",
 	"advancement.create.cart_pickup": "UNLOCALIZED: Strong Arms",
-	"advancement.create.cart_pickup.desc": "UNLOCALIZED: Pick up a Minecart Contraption with at least 200 attached blocks",
+	"advancement.create.cart_pickup.desc": "捡起一个至少带有200个方块的矿车结构",
 	"advancement.create.anvil_plough": "锻匠大炮",
 	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
 	"advancement.create.lava_wheel_00000": "风火轮",
@@ -739,15 +739,15 @@
 	"advancement.create.drain": "滚筒排液",
 	"advancement.create.drain.desc": "目睹物品被分液池排空",
 	"advancement.create.steam_engine": "发电站",
-	"advancement.create.steam_engine.desc": "UNLOCALIZED: Use a Steam engine to generate torque",
+	"advancement.create.steam_engine.desc": "UNLOCALIZED: 用蒸汽引擎产生动力（扭矩？）",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
 	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
 	"advancement.create.backtank.desc": "UNLOCALIZED: Create a copper backtank and make it accumulate Air Pressure",
 	"advancement.create.diving_suit": "准备深潜",
 	"advancement.create.diving_suit.desc": "装备潜水头盔和铜制背罐，然后跳进水里",
-	"advancement.create.mechanical_pump_0": "UNLOCALIZED: Under Pressure",
-	"advancement.create.mechanical_pump_0.desc": "UNLOCALIZED: Place and power a Mechanical Pump",
+	"advancement.create.mechanical_pump_0": "面临压力",
+	"advancement.create.mechanical_pump_0.desc": "放置一个动力泵并为其供能",
 	"advancement.create.glass_pipe": "流之观察者",
 	"advancement.create.glass_pipe.desc": "透过带窗的流体管道观察流体在管道中流淌，使用扳手可打开直线流体管道的窗户",
 	"advancement.create.water_supply": "水洼收集者",
@@ -786,16 +786,16 @@
 	"advancement.create.speed_controller.desc": "放置一个转速控制器，这是换档的终极装置",
 	"advancement.create.mechanical_arm": "飞转的手！",
 	"advancement.create.mechanical_arm.desc": "制作动力臂，选择输入和输出，放置并给予它动力，然后看着它为你完成所有工作",
-	"advancement.create.mechanical_crafter": "UNLOCALIZED: Automated Assembly",
-	"advancement.create.mechanical_crafter.desc": "UNLOCALIZED: Place and power some Mechanical Crafters",
+	"advancement.create.mechanical_crafter": "自动化装配",
+	"advancement.create.mechanical_crafter.desc": "放置一些动力合成器并为其供能",
 	"advancement.create.crushing_wheel": "一对大家伙",
 	"advancement.create.crushing_wheel.desc": "制作一些能更快粉碎物品的粉碎轮",
 	"advancement.create.haunted_bell": "UNLOCALIZED: Shadow Sense",
-	"advancement.create.haunted_bell.desc": "UNLOCALIZED: Toll a Haunted Bell",
+	"advancement.create.haunted_bell.desc": "敲响一个缠魂钟",
 	"advancement.create.clockwork_bearing": "巧械时钟",
 	"advancement.create.clockwork_bearing.desc": "组装安装在发条轴承上的装置",
-	"advancement.create.display_link": "UNLOCALIZED: Big Data",
-	"advancement.create.display_link.desc": "UNLOCALIZED: Use a Display link to visualise information",
+	"advancement.create.display_link": "大数据",
+	"advancement.create.display_link.desc": "用显示板可视化资讯",
 	"advancement.create.potato_cannon": "Fwoomp!",
 	"advancement.create.potato_cannon.desc": "用土豆加农炮击杀一个生物",
 	"advancement.create.extendo_grip": "biu biu biu!",
@@ -804,8 +804,8 @@
 	"advancement.create.linked_controller.desc": "用无线红石遥控器激活无线红石终端",
 	"advancement.create.arm_blaze_burner": "熊熊燃烧",
 	"advancement.create.arm_blaze_burner.desc": "指导动力臂给烈焰人燃烧室投食",
-	"advancement.create.crusher_maxed_0000": "UNLOCALIZED: Crushing it",
-	"advancement.create.crusher_maxed_0000.desc": "UNLOCALIZED: Operate a Pair of Crushing wheels at max speed",
+	"advancement.create.crusher_maxed_0000": "压碎它",
+	"advancement.create.crusher_maxed_0000.desc": "让一对粉碎轮以最高速度运行",
 	"advancement.create.arm_many_targets": "掌控全局",
 	"advancement.create.arm_many_targets.desc": "配置一个有十个或更多输出位置的动力臂",
 	"advancement.create.potato_cannon_collide": "蔬菜烟花",
@@ -1513,7 +1513,7 @@
 	"create.schedule.reset": "重置进度",
 	"create.schedule.skip": "跳过当前车站",
 	"create.schedule.applied_to_train": "列车现在遵循这个时刻表",
-	"create.schedule.non_controlling_seat": "列车长需要坐在控制器方块前面",
+	"create.schedule.non_controlling_seat": "列车长需要坐在驾驶台方块前面",
 	"create.schedule.remove_with_empty_hand": "用空手移除当前时刻表",
 	"create.schedule.auto_removed_from_train": "自动时刻表被废弃",
 	"create.schedule.removed_from_train": "从列车取回时刻表",
@@ -1543,43 +1543,43 @@
 	"create.portal_track.missing": "目标传送门还未生成",
 	"create.portal_track.blocked": "目标位置被封堵 (%1$s,%2$s,%3$s)",
 
-	"create.station.idle": "UNLOCALIZED: Station is Idle",
-	"create.station.assembly_title": "UNLOCALIZED: Train Assembly",
-	"create.station.close": "UNLOCALIZED: Close Window",
-	"create.station.cancel": "UNLOCALIZED: Cancel Assembly",
-	"create.station.failed": "UNLOCALIZED: Assembly Failed",
-	"create.station.icon_type": "UNLOCALIZED: Icon Type",
-	"create.station.create_train": "UNLOCALIZED: Create new Train",
-	"create.station.assemble_train": "UNLOCALIZED: Assemble Train",
-	"create.station.disassemble_train": "UNLOCALIZED: Disassemble Train",
-	"create.station.remove_schedule": "UNLOCALIZED: Retrieve Schedule",
-	"create.station.remove_auto_schedule": "UNLOCALIZED: Discard Auto-Schedule",
-	"create.station.no_assembly_diagonal": "UNLOCALIZED: Cannot build trains",
-	"create.station.no_assembly_diagonal_1": "UNLOCALIZED: on diagonal tracks",
-	"create.station.no_assembly_curve": "UNLOCALIZED: Cannot build trains",
-	"create.station.no_assembly_curve_1": "UNLOCALIZED: on curved tracks",
-	"create.station.train_not_aligned": "UNLOCALIZED: Cannot disassemble,",
-	"create.station.train_not_aligned_1": "UNLOCALIZED: not all carriages aligned",
-	"create.station.carriage_number": "UNLOCALIZED: Carriage %1$s:",
-	"create.station.retry": "UNLOCALIZED: Resolve this and retry",
-	"create.station.no_bogeys": "UNLOCALIZED: No Bogeys",
-	"create.station.one_bogey": "UNLOCALIZED: 1 Bogey",
-	"create.station.more_bogeys": "UNLOCALIZED: %1$s Bogeys",
-	"create.station.how_to": "UNLOCALIZED: Use Train Casing on highlighted Tracks to create bogeys.",
-	"create.station.how_to_1": "UNLOCALIZED: Remove bogeys by breaking the block on top.",
-	"create.station.how_to_2": "UNLOCALIZED: Build carriages attached to one or two bogeys each.",
+	"create.station.idle": "车站空闲",
+	"create.station.assembly_title": "组装列车",
+	"create.station.close": "关闭窗口",
+	"create.station.cancel": "取消组装",
+	"create.station.failed": "组装失败",
+	"create.station.icon_type": "图标类型",
+	"create.station.create_train": "创建新列车",
+	"create.station.assemble_train": "组装列车",
+	"create.station.disassemble_train": "拆解列车",
+	"create.station.remove_schedule": "取回时刻表",
+	"create.station.remove_auto_schedule": "放弃自动时刻表",
+	"create.station.no_assembly_diagonal": "无法搭建列车",
+	"create.station.no_assembly_diagonal_1": "在对角的轨道上",
+	"create.station.no_assembly_curve": "无法搭建列车",
+	"create.station.no_assembly_curve_1": "在弧形的轨道上",
+	"create.station.train_not_aligned": "无法拆解，",
+	"create.station.train_not_aligned_1": "仍有车厢未对齐",
+	"create.station.carriage_number": "车厢%1$s：",
+	"create.station.retry": "解决此问题并重试",
+	"create.station.no_bogeys": "无转向架",
+	"create.station.one_bogey": "1个转向架",
+	"create.station.more_bogeys": "%1$s个转向架",
+	"create.station.how_to": "对着高亮的轨道使用列车机壳创建转向架。",
+	"create.station.how_to_1": "破坏转向架最上方的方块来移除它。",
+	"create.station.how_to_2": "搭建每个都连接了1个或2个转向架的车厢。",
 
-	"create.train_assembly.too_many_bogeys": "UNLOCALIZED: Too many Bogeys attached: %1$s",
-	"create.train_assembly.frontmost_bogey_at_station": "UNLOCALIZED: Frontmost Bogey must be at Station Marker",
-	"create.train_assembly.no_bogeys": "UNLOCALIZED: No Bogeys Found",
-	"create.train_assembly.not_connected_in_order": "UNLOCALIZED: Bogeys are not connected in order",
-	"create.train_assembly.bogeys_too_close": "UNLOCALIZED: Bogeys %1$s and %2$s are too close to each other",
-	"create.train_assembly.single_bogey_carriage": "UNLOCALIZED: This Bogey type cannot support a carriage on its own",
-	"create.train_assembly.nothing_attached": "UNLOCALIZED: No structure attached to Bogey %1$s",
-	"create.train_assembly.no_controls": "UNLOCALIZED: At least one forward-facing controls block needs to be mounted on the train",
-	"create.train_assembly.sideways_controls": "UNLOCALIZED: A mounted controls block is facing sideways",
-	"create.train_assembly.bogey_created": "UNLOCALIZED: Bogey created. Click again to cycle type",
-	"create.train_assembly.requires_casing": "UNLOCALIZED: Use Railway Casing to create bogeys on tracks",
+	"create.train_assembly.too_many_bogeys": "连接的转向架太多：%1$s",
+	"create.train_assembly.frontmost_bogey_at_station": "最前面的转向架必须位于车站标记处",
+	"create.train_assembly.no_bogeys": "找不到转向架",
+	"create.train_assembly.not_connected_in_order": "转向架没有按顺序连接",
+	"create.train_assembly.bogeys_too_close": "转向架%1$s和%2$s距离太近",
+	"create.train_assembly.single_bogey_carriage": "这种转向架不能单独支撑一个车厢",
+	"create.train_assembly.nothing_attached": "没有结构连接到转向架%1$s",
+	"create.train_assembly.no_controls": "列车上至少需要安装一个面向前方的驾驶台方块",
+	"create.train_assembly.sideways_controls": "一个安装的驾驶台方块面向侧面",
+	"create.train_assembly.bogey_created": "转向架已创建，再次点击来循环修改类型",
+	"create.train_assembly.requires_casing": "在轨道上使用列车机壳来创建转向架",
 
 	"create.track_target.set": "UNLOCALIZED: Targeted track selected",
 	"create.track_target.success": "UNLOCALIZED: Successfully bound to targeted track",
@@ -2909,7 +2909,7 @@
 
 	"create.ponder.train_assembly.header": "组装列车",
 	"create.ponder.train_assembly.text_1": "选择列车轨道，然后将车站放置在附近",
-	"create.ponder.train_assembly.text_10": "每列列车都需要装上列车控制器",
+	"create.ponder.train_assembly.text_10": "每列列车都需要装上列车驾驶台",
 	"create.ponder.train_assembly.text_11": "可选的第二个允许从车站往两个方向出发",
 	"create.ponder.train_assembly.text_12": "打开车站UI并确认组装过程",
 	"create.ponder.train_assembly.text_13": "列车只能在车站被拆解为方块",
@@ -2925,7 +2925,7 @@
 	"create.ponder.train_assembly.text_9": "储存在保险库中的燃料不会被列车消耗",
 
 	"create.ponder.train_controls.header": "控制列车",
-	"create.ponder.train_controls.text_1": "每个列车装置都需要列车控制器",
+	"create.ponder.train_controls.text_1": "每个列车装置都需要列车驾驶台",
 	"create.ponder.train_controls.text_2": "组装好后，右击方块开始驾驶",
 	"create.ponder.train_controls.text_3": "使用移动键加速和引导火车",
 	"create.ponder.train_controls.text_4": "如果需要，可以使用鼠标滚轮微调最高速度",
@@ -2938,7 +2938,7 @@
 	"create.ponder.train_schedule.text_1": "时刻表让列车可以被其他司机控制",
 	"create.ponder.train_schedule.text_2": "将物品拿在手上右击打开界面",
 	"create.ponder.train_schedule.text_3": "一旦规划好，时刻表就可以交给列车司机",
-	"create.ponder.train_schedule.text_4": "任何坐在列车控制器前面的生物或烈焰人燃烧室都是合格的列车长",
+	"create.ponder.train_schedule.text_4": "任何坐在列车驾驶台前面的生物或烈焰人燃烧室都是合格的列车长",
 	"create.ponder.train_schedule.text_5": "用拴绳拴住生物可以更方便地给予它们座位",
 	"create.ponder.train_schedule.text_6": "可以随时从司机那里取回时刻表",
 
